# fast-agent

./: .dockerignore  .gitignore  Dockerfile  QUICK_START.md  README.md  VOICE_COMMAND_README.md  docker-clean.sh  docker-compose.yml  env.example  main.py  pyproject.toml  requirements.txt  test_voice_api.html
app/core/: config.py
app/routers/: api.py  items.py  users.py  voice.py  websocket.py
app/schemas/: __init__.py  item.py  user.py  voice.py
app/services/: ai_service.py  item_service.py  menu_service.py  permission_service.py
app/utils/: logging.py  websocket_manager.py
tests/: test_main.py
